--- a/setting/settings.json
+++ b/setting/settings.json
@@ -1,4 +1,4 @@
 {
     "_comment": "Update the Location to the appropriate location of your json setting files. ",
-    "Location": ""
+    "Location": "https://www.dropbox.com/home/PYTHON_gui/settings"
 }
