--- a/setting/settings.json
+++ b/setting/settings.json
@@ -1,1 +1,1 @@
-{"_comment": "Update the Location to the appropriate location of your json setting files. ", "Location": "./setting/savedsettings.json"}
+{"_comment": "Update the Location to the appropriate location of your json setting files. ", "Location": "./setting/savedsettings"}
