sizers  updated for windows funtionality

--- a/setting/settings.json
+++ b/setting/settings.json
@@ -1,1 +1,1 @@
-{"_comment": "Update the Location to the appropriate location of your json setting files. ", "Location": "./setting/savedsettings"}
+{"_comment": "Update the Location to the appropriate location of your json setting files. ", "Location": "C:\\Users\\kineuser\\Desktop\\savedsettings"}
